@@ -1,3 +1,11 @@
+2004-04-30  Nick Clifton  <nickc@redhat.com>
+
+	* gas/arm/reg-alias.s: New file: Test case sensitive register
+	aliases.
+	* gas/arm/reg-alias.d: New file: Expected test output.
+	* gas/arm/arm.exp: Run reg-alias test.
+	Arrange tests in a more orderly fashion.
+
 2004-04-30  Ben Elliston  <bje@au.ibm.com>
 
 	* gas/ppc/power4.s: Add dcbz and dcbzl test cases.
